# sp

./: CMakeLists.txt  SP.c  zaebancii.c
audfunkcii/: audf1.c  audf2.c
audstringovi/: auds1.c  auds2.c  auds3.c  auds4.c  auds5.c  auds6.c  auds7.c
labs6/: labs6zad1.c  labs6zad10.c  labs6zad11.c  labs6zad3.c  labs6zad4.c  labs6zad8.c  labs6zad9.c
labs7/: zad1.c  zad3.c  zad4.c
labs8/: labs8zad1.c  labs8zad2.c
