cmake_minimum_required(VERSION 3.23)
project(sp C)

set(CMAKE_C_STANDARD 99)

add_executable(labs6zad1 labs6/labs6zad1.c)
add_executable(labs6zad3 labs6/labs6zad3.c)
add_executable(labs6zad4 labs6/labs6zad4.c)
add_executable(labs6zad8 labs6/labs6zad8.c)
add_executable(labs6zad9 labs6/labs6zad9.c)
add_executable(labs6zad10 labs6/labs6zad10.c)
add_executable(labs6zad11 labs6/labs6zad11.c)
add_executable(zad1 labs7/zad1.c)
add_executable(zad3 labs7/zad3.c)
add_executable(zad4 labs7/zad4.c)
add_executable(audf1 audfunkcii/audf1.c)
add_executable(audf2 audfunkcii/audf2.c)
add_executable(labs8zad1 labs8/labs8zad1.c)
add_executable(labs8zad2 labs8/labs8zad2.c)